# py_solar_assistant

./: .gitignore  CHANGELOG.md  LICENSE  NOTICE  README.md  RELEASING.md  pyproject.toml
examples/: rest_read.py  rest_set.py  rest_system.py  websocket_read.py  websocket_set.py
scripts/: release.sh
src/py_solar_assistant/: __init__.py  _errors.py  _url.py  cloud.py  device.py  socket.py
tests/: conftest.py  test_cloud.py  test_device.py  test_socket.py  test_url.py
