[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "py-solar-assistant"
version = "0.1.0"
description = "Python client for SolarAssistant — cloud API and real-time WebSocket"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{name = "Solar-Assistant"}]
keywords = ["solar-assistant", "solar", "inverter", "battery", "homeassistant"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["aiohttp>=3.9"]

[project.urls]
Homepage = "https://github.com/Solar-Assistant/py_solar_assistant"
Repository = "https://github.com/Solar-Assistant/py_solar_assistant"
Issues = "https://github.com/Solar-Assistant/py_solar_assistant/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
py_solar_assistant = ["py.typed"]
